cmake_minimum_required(VERSION 3.12)

project(blackthorn)

set(CMAKE_CXX_STANDARD 20)

if (WIN32)
  add_definitions(-D_WIN32_WINNT=0x0A00)
endif()

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

set(CLIENT_PROJECT_NAME "client")
set(CLIENT_PROJECT_PATH "src/client/")

set(LIBRARY_PROJECT_NAME "library")
set(LIBRARY_PROJECT_PATH "src/library/")

set(SERVER_PROJECT_NAME "server")
set(SERVER_PROJECT_PATH "src/server/")

set(TEST_PROJECT_NAME "test")
set(TEST_PROJECT_PATH "src/test/")

set(SOURCES "*.cpp")
set(HEADERS "*.hpp")

file(GLOB_RECURSE CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "${CLIENT_PROJECT_PATH}${SOURCES}")
file(GLOB_RECURSE CLIENT_HEADERS RELATIVE ${CMAKE_SOURCE_DIR} "${CLIENT_PROJECT_PATH}${HEADERS}")

file(GLOB_RECURSE LIBRARY_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "${LIBRARY_PROJECT_PATH}${SOURCES}")
file(GLOB_RECURSE LIBRARY_HEADERS RELATIVE ${CMAKE_SOURCE_DIR} "${LIBRARY_PROJECT_PATH}${HEADERS}")

file(GLOB_RECURSE SERVER_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "${SERVER_PROJECT_PATH}${SOURCES}")
file(GLOB_RECURSE SERVER_HEADERS RELATIVE ${CMAKE_SOURCE_DIR} "${SERVER_PROJECT_PATH}${HEADERS}")

file(GLOB_RECURSE TEST_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "${TEST_PROJECT_PATH}${SOURCES}")
file(GLOB_RECURSE TEST_HEADERS RELATIVE ${CMAKE_SOURCE_DIR} "${TEST_PROJECT_PATH}${HEADERS}")

add_executable(${CLIENT_PROJECT_NAME} ${CLIENT_SOURCES} ${CLIENT_HEADERS})
add_library(${LIBRARY_PROJECT_NAME} STATIC ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})
add_executable(${SERVER_PROJECT_NAME} ${SERVER_SOURCES} ${SERVER_HEADERS})
add_executable(${TEST_PROJECT_NAME} ${TEST_SOURCES} ${TEST_HEADERS})

target_link_libraries(${CLIENT_PROJECT_NAME} ${CONAN_LIBS} ${LIBRARY_PROJECT_NAME})
target_link_libraries(${LIBRARY_PROJECT_NAME} ${CONAN_LIBS})
target_link_libraries(${SERVER_PROJECT_NAME} ${CONAN_LIBS} ${LIBRARY_PROJECT_NAME})
target_link_libraries(${TEST_PROJECT_NAME} ${CONAN_LIBS} ${LIBRARY_PROJECT_NAME})
